--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 /* spring.jpa.hibernate.ddl-auto=create-update
 /* spring.jpa.show-sql=true 
 
-spring.datasource.url=${JDBC_DATASOURCE_URL}
+spring.database_url=${JDBC_DATABASE_URL}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
