--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-/* spring.datasource.url=jdbc:mysql://localhost:3306/db_bcb
-/* spring.datasource.username=
-/* spring.datasource.password=
-/* spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-/* spring.jpa.hibernate.ddl-auto=create-update
-/* spring.jpa.show-sql=true 
+# spring.datasource.url=jdbc:mysql://localhost:3306/db_bcb
+# spring.datasource.username=
+# spring.datasource.password=
+# spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# spring.jpa.hibernate.ddl-auto=create-update
+# spring.jpa.show-sql=true
 
 spring.database_url=${JDBC_DATABASE_URL}
-spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-update
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
