--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 # spring.jpa.hibernate.ddl-auto=create-update
 # spring.jpa.show-sql=true
 
-spring.database_url=${JDBC_DATABASE_URL}
+spring.datasource_url=${JDBC_DATABASE_URL}
 # spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.ddl-auto=create-update
 spring.jpa.show-sql=true
