--- a/pom.xml
+++ b/pom.xml
@@ -6,15 +6,15 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.6.3</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>projeto_final_sq58</artifactId>
+	<artifactId>projeto-final-tamara</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>projeto_final_sq58</name>
-	<description>Projeto Final Squad58 - BlackCodeBrasil</description>
+	<name>projeto-final-tamara</name>
+	<description>Projeto-Final-Recode</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -25,7 +25,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -40,11 +39,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 	<build>
@@ -71,5 +65,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
