--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,8 @@
-# spring.datasource.url=jdbc:mysql://localhost:3306/db_bcb
-# spring.datasource.username=
-# spring.datasource.password=
-# spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-# spring.jpa.hibernate.ddl-auto=create-update
-# spring.jpa.show-sql=true
-
-spring.datasource_url=${JDBC_DATABASE_URL}
-# spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=create-update
+server.port=8090
+spring.datasource.url=jdbc:mysql://localhost:3306/db_bcb
+spring.datasource.username=root
+spring.datasource.password=Potamogeton93@
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
+
